--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "js-yaml": "^3.14.1",
     "lodash.merge": "^4.6.2",
     "moment": "^2.29.1",
+    "node-schedule": "^1.3.2",
     "path": "^0.12.7",
     "sqlite3": "^5.0.0"
   },
