--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "moment": "^2.29.1",
     "node-schedule": "^1.3.2",
     "path": "^0.12.7",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "5.0.0"
   },
   "deprecated": false,
   "description": "Een simpele manier om een dc bot te maken!",
